v3.7.16 (XXXX-XX-XX)
--------------------

* Fixed potential undefined behavior in edge cache during cache migration tasks.
  There was a short window of time in which an already freed Table could be used
  by concurrently running edge lookups.

* Change error message for queries that use too much memory from "resource limit
  exceeded" to "query would use more memory than allowed".

* arangorestore: Fix the order (regarding distributeShardsLike) in which
  collections are being created during restore, which could result in an error
  and make manual intervention necessary.

* Updated ArangoDB Starter to 0.15.3.

* Fix caching of index selectivity estimates in cluster.
  The cache values expired too early in previous versions, making the cache
  ineffective.

* Add better error message for replication request failures in case requests are
  retried.

* Make background statistics gathering more efficient by avoiding one AQL query
  every 10 seconds that fetched the most recent stats entry. Instead, buffer the
  entry in value after we have written it. Also spread out the statistics calls
  by different servers more randomly, so that request spikes are avoided for
  cluster with many coordinators that used to run their statistics queries at
  about the same time when the instances were started simultaneously.

* Fixed compilation and linking when using glibc 2.34.

* Fuerte: don't fall back to identity encoding in case of unknown encoding.

* Fixed ES-881: Fixed LDAP global options. This needs to use the first active
  provider, not just the first provider and it should be globally disabled.

* Properly clean up replication client entries for tailing from WAL so that
  archived WAL files are not retained for an unnecessary long time period.

* Added metrics `rocksdb_wal_sequence_lower_bound`,
  `rocksdb_archived_wal_files`, `rocskdb_prunable_wal_files` and
  `rocksdb_wal_pruning_active` to allow inspection of WAL file pruning from the
  outside.
